--- a/gcp/image/files/my.cnf
+++ b/gcp/image/files/my.cnf
@@ -4,6 +4,7 @@ socket=/var/lib/mysql/mysql.sock
 symbolic-links=0
 
 max_allowed_packet=300M
+skip-grant-tables
 
 [mysqld_safe]
 log-error=/var/log/mysql/mysqld.log
